--- a/Muse.uproject
+++ b/Muse.uproject
@@ -9,22 +9,24 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		},
-    {
-      "Name": "MuseGAS",
-      "Type": "Runtime",
-      "LoadingPhase": "Default",
-      "AdditionalDependencies": [
-        "Engine"
-      ]
-    },
-    {
-      "Name": "MuseMeleeAttacks",
-      "Type": "Runtime",
-      "LoadingPhase": "Default",
-      "AdditionalDependencies": [
-        "Engine"
-      ]
-    }
+		{
+			"Name": "MuseGAS",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"GameplayAbilities"
+			]
+		},
+		{
+			"Name": "MuseMeleeAttacks",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"CoreUObject"
+			]
+		}
 	],
 	"Plugins": [
 		{
