--- a/Muse.uproject
+++ b/Muse.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Muse",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		},
 		{
 			"Name": "MuseGAS",
@@ -26,6 +29,15 @@
 				"Engine",
 				"CoreUObject",
 				"GameplayAbilities"
+			]
+		},
+		{
+			"Name": "MuseMovement",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"CoreUObject"
 			]
 		}
 	],
