MM06.4: New module and components to allow overrding the path following component.

--- a/Muse.uproject
+++ b/Muse.uproject
@@ -39,6 +39,16 @@
 				"Engine",
 				"CoreUObject"
 			]
+		},
+		{
+			"Name": "MuseAI",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"CoreUObject",
+				"AIModule"
+			]
 		}
 	],
 	"Plugins": [
